# insuranceFetcherStorer

./: .gitignore  README.md  pyproject.toml
crewai_env/: pyvenv.cfg
crewai_env/Scripts/: activate  activate.bat
src/insurerai/: crew.py  main.py
src/insurerai/config/: agents.yaml  tasks.yaml
src/insurerai/tools/: custom_tool.py
