[project]
name = "insurerai"
version = "0.1.0"
description = "insurerai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
insurerai = "insurerai.main:run"
run_crew = "insurerai.main:run"
train = "insurerai.main:train"
replay = "insurerai.main:replay"
test = "insurerai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
